Fixed unaligned logo

--- a/client/src/components/NavBar/NavBar.less
+++ b/client/src/components/NavBar/NavBar.less
@@ -18,14 +18,11 @@
 
   #link {
     #casmm-logo {
-      position: relative;
-      bottom: 1em;
-      left: auto;
-      top: 2.05rem;
-      padding: 1px;
-      height: 8vh;
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 6vh;
       width: auto;
-      margin-left: -12px;
     }
   }
 }
